# mcp-xamp

./: .gitattributes  .gitignore  .mcp.json  LICENSE  Makefile  README.md  exploration.md  pyproject.toml
openspec/changes/archive/2026-06-16-mcp-xamp-server/: archive-report.md  design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-06-16-mcp-xamp-server/specs/database-connection/: spec.md
openspec/changes/archive/2026-06-16-mcp-xamp-server/specs/schema-exploration/: spec.md
openspec/specs/query-execution/: spec.md
openspec/specs/security-model/: spec.md
src/mcp_xamp/: __init__.py  server.py  types.py
src/mcp_xamp/db/: __init__.py  connection.py  executor.py  schema.py
src/mcp_xamp/security/: __init__.py  sanitizer.py  validator.py
tests/: __init__.py  conftest.py  test_connection.py  test_executor.py  test_sanitizer.py  test_schema.py  test_server.py  test_types.py  test_validator.py
